------------------------------------------------------------------------
r2517 | gaser | 2024-01-09 16:15:15

Changed paths:
 D CAT.glnx86/CAT_Surf2Vol
 D CAT.maca64/CAT_Surf2Vol
 D CAT.maci64/CAT_Surf2Vol
 D CAT.w32/CAT_Surf2Vol.exe
 M CHANGES.txt
 M Contents.m
 D cat_amap_new.mexmaci64
 M cat_io_xml.m
 M cat_main_gintnorm.m
 M cat_run_job1639.m
 M cat_vol_approx.m
 M cat_vol_inpaint.m
 M cat_vol_pbtsimple.m
 M cat_vol_set_com.m
 M doc/cat.html

(1) Changed: Added warning that xml-file could not be written in cat_io_xml.m.
(2) Changed: Set default approx-function to 'nn' in cat_vol_approx.
(3) Changed: Added additional check. for xml-mat file in cat_run_job1639.m.
------------------------------------------------------------------------
r2510 | gaser | 2023-12-22 12:35:54

Changed paths:
 M CAT.glnx86/CAT_3dVol2Surf
 M CAT.glnx86/CAT_AddValuesToSurf
 M CAT.glnx86/CAT_AverageSurfaces
 M CAT.glnx86/CAT_BlurSurfHK
 M CAT.glnx86/CAT_Central2Pial
 M CAT.glnx86/CAT_DeformSurf
 M CAT.glnx86/CAT_DumpCurv
 M CAT.glnx86/CAT_DumpSurfArea
 M CAT.glnx86/CAT_DumpSurfaceRatio
 M CAT.glnx86/CAT_FixTopology
 M CAT.glnx86/CAT_FractalDimension
 M CAT.glnx86/CAT_Hausdorff
 M CAT.glnx86/CAT_Isometize
 M CAT.glnx86/CAT_MarchingCubesGenus0
 M CAT.glnx86/CAT_MarkDefects
 M CAT.glnx86/CAT_RefineMesh
 M CAT.glnx86/CAT_ResampleSphericalSurf
 M CAT.glnx86/CAT_ResampleSphericalSurfSPH
 M CAT.glnx86/CAT_ResampleSurf
 M CAT.glnx86/CAT_SelfIntersect
 M CAT.glnx86/CAT_SeparatePolygon
 M CAT.glnx86/CAT_SmoothConvexity
 M CAT.glnx86/CAT_SulcusDepth
 M CAT.glnx86/CAT_Surf2Sphere
 M CAT.glnx86/CAT_Surf2Vol
 M CAT.glnx86/CAT_SurfDistance
 M CAT.glnx86/CAT_WarpSurf
 M CAT.maca64/CAT_3dVol2Surf
 M CAT.maca64/CAT_AddValuesToSurf
 M CAT.maca64/CAT_AverageSurfaces
 M CAT.maca64/CAT_BlurSurfHK
 M CAT.maca64/CAT_Central2Pial
 M CAT.maca64/CAT_DeformSurf
 M CAT.maca64/CAT_DumpCurv
 M CAT.maca64/CAT_DumpSurfArea
 M CAT.maca64/CAT_DumpSurfaceRatio
 M CAT.maca64/CAT_FixTopology
 M CAT.maca64/CAT_FractalDimension